# merlin-cust-seg

./: README.md  dataset_documentation.md  eda.ipynb  main.py  plot_legoland_opportunity.py  presentation_plan.md  pyproject.toml
data/: Merlin_Attraction_Locations.xlsx  TS003-2021-4-filtered-2026-05-10T09_02_51Z.xlsx  iod25_msoa.csv
