[project]
name = "merlin-cust-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "openai>=2.36.0",
    "openai-agents>=0.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pip>=26.1.1",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
]
